Added some config outputs

--- a/app/views/console/env.html.erb
+++ b/app/views/console/env.html.erb
@@ -1,4 +1,10 @@
 <p> 
+	Env: <%= @env %><br>
 	Secret: <%= @id %><br>
-	ID: <%= @secret %>
+	ID: <%= @secret %><br>
+	Host: <%= @host %><br>
+	Gems: <br>
+	<% @gems.each do |e| %>
+		<li><%= e %></li>
+	<% end %>
 </p>
