--- a/app/views/activity/config.js.erb
+++ b/app/views/activity/config.js.erb
@@ -1,8 +1,8 @@
 define({
     "workflowApiVersion": "1.0",
     "metaData": {
-        "icon": "../jb-icon.png",
-        "iconSmall": "../jb-icon.png",
+        "icon": "../jbicon.png",
+        "iconSmall": "../jbicon.png",
         "category": "message",
         "version": "1.0"
     },
