remove argument settings3

--- a/app/views/activity/config.js.erb
+++ b/app/views/activity/config.js.erb
@@ -15,8 +15,8 @@ define({
     },
     "arguments": {
         "execute": {
-			"inArguments": [],
-            "outArguments": [],
+			"inArguments": {},
+            "outArguments": {},
             "url": "https://<%= @host %>/activity/execute",
             "verb": "POST",
             "body": "",
