remove argument settings3

--- a/app/views/activity/edit.html.erb
+++ b/app/views/activity/edit.html.erb
@@ -100,8 +100,8 @@
     	//toJbPayload['configurationArguments'] = toJbPayload['configurationArguments'] || {};
     	//toJbPayload['metaData'] = toJbPayload['metaData'] || {};
 		
-		//toJbPayload['configurationArguments'].applicationExtensionKey = "awagonerCatsEye";
-		//toJbPayload['configurationArguments'].applicationExtensionEndpointUrl = "https://damp-castle-6031.herokuapp.com/activity";
+		toJbPayload['configurationArguments'].applicationExtensionKey = "awagonerCatsEye";
+		toJbPayload['configurationArguments'].applicationExtensionEndpointUrl = "https://damp-castle-6031.herokuapp.com/activity";
 		//toJbPayload['lang'] = toJbPayload['lang'] || {};
 		//toJbPayload['edit'] = toJbPayload['edit'] || {};
 		//toJbPayload.workflowApiVersion = 'REST';
