--- a/app/views/console/_collect.html.erb
+++ b/app/views/console/_collect.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag("fire", method: "post") do %>
+<%= form_tag("console/fire", method: "post") do %>
 	<%= label_tag(:k, "Contactkey:") %>
 	<%= text_field_tag(:k) %>
 	<%= label_tag(:e, "Email Address:") %>
