--- a/app/views/activity/edit.html.erb
+++ b/app/views/activity/edit.html.erb
@@ -108,6 +108,8 @@
 		//toJbPayload['arguments'].execute.inArguments.message = $("#select1").val();
 		//toJbPayload['metaData'].icon = '../jb-icon2.png';
 		
+		var value = $("#select1").val();
+		toJbPayload['arguments'].execute.inArguments.message = value;
 		toJbPayload['metaData'].isConfigured  = true;
 		console.log(toJbPayload);
         connection.trigger('updateActivity', toJbPayload);
