added argument in arguments to config file

--- a/app/views/activity/config.js.erb
+++ b/app/views/activity/config.js.erb
@@ -15,6 +15,10 @@ define({
     },
     "arguments": {
         "execute": {
+			"inArguments": {
+                "baz": ""
+            },
+            "outArguments": {},
             "url": "https://<%= @host %>/activity/execute",
             "verb": "POST",
             "body": "",
