--- a/app/views/console/index.html.erb
+++ b/app/views/console/index.html.erb
@@ -1,2 +1,25 @@
-<%= render "collect" %><br>
-<%= render "list" %><br>
+<h2>Custom Activity Console</h1>
+<div class="container-fluid">
+<div class="row">
+	<div class="col-md-3">
+		<div class="panel panel-default">
+			<div class="panel panel-heading">
+				Trigger Event
+			</div>
+			<div class="panel panel-body">
+				<%= render "collect" %>
+			</div>
+		</div>
+	</div>
+		<div class="col-md-9">
+		<div class="panel panel-default">
+			<div class="panel panel-heading">
+				Custom Activity Log
+			</div>
+			<div class="panel panel-body">
+				<%= render "list" %>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
